Add native image support with GraalVM and rename ComparisonReporter to ComparisonTerminalVisualizer